[tool.poetry]
name = "aptos-wallet-mnemonic"
version = "0.2.0"
description = "Aptos SDK"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
httpx = "^0.23.0"
PyNaCl = "^1.5.0"
aiohttp = "^3.8.0"
mnemonic = "^0.20"
aptos-sdk = "^0.2.0"
ecdsa = "^0.18.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
autoflake = "^1.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"